TUC-131 Creation of the ComputingComponent class. It is meant to replace the CoreComponent for computation. Copied code from CoreComponent into the ComputingComponent, except the one related to loading drugs and treatments.

--- a/src/tucucore/makefile
+++ b/src/tucucore/makefile
@@ -30,6 +30,7 @@ SOURCES := \
            cachedexponentials.cpp \
            concentrationcalculator.cpp \
            corecomponent.cpp \
+           computingcomponent.cpp \
            covariateevent.cpp \
            covariateextractor.cpp \
            cyclestatisticscalculator.cpp \
