TUC-52 Refactored the ValidDoses

--- a/src/tucucore/makefile
+++ b/src/tucucore/makefile
@@ -34,6 +34,7 @@ SOURCES := \
            covariateextractor.cpp \
            cyclestatisticscalculator.cpp \
            dosage.cpp \
+					 formulationandroute.cpp \
            hardcodedoperation.cpp \
            intakeextractor.cpp \
            intakeintervalcalculator.cpp \
@@ -50,6 +51,7 @@ SOURCES := \
            sampleextractor.cpp \
            targetevent.cpp \
            targetextractor.cpp \
+					 validvalues.cpp \
            pkmodels/onecompartmentbolus.cpp \
            pkmodels/onecompartmentextra.cpp \
            pkmodels/onecompartmentinfusion.cpp \
