TUC-52 Modified the FormulationAndRoute. It does not have an Id, the Id being in FullFormulationAndRoute. Also added classes TargetEvaluationResult and and empty TargetEvaluator.

--- a/src/tucucore/makefile
+++ b/src/tucucore/makefile
@@ -34,7 +34,7 @@ SOURCES := \
            covariateextractor.cpp \
            cyclestatisticscalculator.cpp \
            dosage.cpp \
-					 formulationandroute.cpp \
+           formulationandroute.cpp \
            hardcodedoperation.cpp \
            intakeextractor.cpp \
            intakeintervalcalculator.cpp \
@@ -51,7 +51,9 @@ SOURCES := \
            sampleextractor.cpp \
            targetevent.cpp \
            targetextractor.cpp \
-					 validvalues.cpp \
+           targetevaluator.cpp \
+           targetevaluationresult.cpp \
+           validvalues.cpp \
            pkmodels/onecompartmentbolus.cpp \
            pkmodels/onecompartmentextra.cpp \
            pkmodels/onecompartmentinfusion.cpp \
