TUC-45 Adding a .cpp file in tucucore/makefile

--- a/src/tucucore/makefile
+++ b/src/tucucore/makefile
@@ -35,6 +35,7 @@ SOURCES := \
            covariateextractor.cpp \
            cyclestatisticscalculator.cpp \
            dosage.cpp \
+           drugdomainconstraintsevaluator.cpp \
            drugmodelimport.cpp \
            hardcodedoperation.cpp \
            intakeextractor.cpp \
