TUC-140 Runge Kutta 4
	modified:   CMakeLists.txt
	modified:   ../qtcreator/tucucore.pri
	modified:   ../visualstudio/tucucore/TucuCore.vcxproj
        * adding new files to build system

	modified:   ../../src/tucucore/intakeintervalcalculator.cpp
	modified:   ../../src/tucucore/intakeintervalcalculator.h
        * created new class like Analytic but for RK
        * removed exponents stuff as there are none

	new file:   ../../src/tucucore/pkmodels/rkonecompartmentextra.cpp
	new file:   ../../src/tucucore/pkmodels/rkonecompartmentextra.h
        * test implementation like one of the existing pkmodels

	modified:   ../../test/tucucore/test_intakeintervalcalculator.h
        * copied existing test for Analytic

--- a/make/cmake/CMakeLists.txt
+++ b/make/cmake/CMakeLists.txt
@@ -3,7 +3,6 @@ project (tucuxi)
 
 set(TUCUXI_ROOT ${CMAKE_BINARY_DIR}/../../)
 
-#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
@@ -75,6 +74,7 @@ set(TUCUXICORE_SOURCES
     ${CORE_DIR}/operation.cpp
     ${CORE_DIR}/pkmodels/onecompartmentbolus.cpp
     ${CORE_DIR}/pkmodels/onecompartmentextra.cpp
+    ${CORE_DIR}/pkmodels/rkonecompartmentextra.cpp
     ${CORE_DIR}/pkmodels/onecompartmentinfusion.cpp
     ${CORE_DIR}/pkmodels/threecompartmentbolus.cpp
     ${CORE_DIR}/pkmodels/threecompartmentextra.cpp
