TUC-140 Runge Kutta 4 This commit adds support for gamma-convoluted absorption RK4 models
	modified:   libs/botan-2.1.0/CMakeLists.txt
	modified:   make/cmake/CMakeLists.txt
        * switched to use vscode with cmake, which revealed
        a couple issues with the cmake stuff. Added the new source
        to be built.

	modified:   src/tucucore/parameterids.h
        * added the gamma params 'a' and 'b'

	modified:   src/tucucore/pkmodels/rkonecompartmentgammaextra.cpp
	modified:   src/tucucore/pkmodels/rkonecompartmentgammaextra.h
        * implemente a gamma absorption model based on the exisitng rk4
        extra model

	modified:   test/tucucore/test_intakeintervalcalculator.h
	modified:   test/tucucore/tests.cpp
        * added a new test for the new model

--- a/libs/botan-2.1.0/CMakeLists.txt
+++ b/libs/botan-2.1.0/CMakeLists.txt
@@ -385,7 +385,7 @@ target_compile_options(${PROJECT_NAME}_shared PUBLIC ${COMPILER_WARNINGS} ${COMP
 target_include_directories(${PROJECT_NAME}_shared PUBLIC ${COMPILER_INCLUDE_DIRS})
 set_target_properties(${PROJECT_NAME}_shared PROPERTIES OUTPUT_NAME ${PROJECT_NAME})
 
-set(CONFIGURATION_FILES configure.py .gitignore .astylerc authors.txt news.rst readme.rst)
+set(CONFIGURATION_FILES configure.py .astylerc authors.txt news.rst readme.rst)
 file(GLOB_RECURSE DOCUMENTATION_FILES doc/* )
 file(GLOB_RECURSE HEADER_FILES src/*.h )
 file(GLOB_RECURSE INFO_FILES src/lib/*info.txt )
