TUC-147 First version of the CLI interface
The source code of Nadir has been reused and adapted for parsing the
queries.

Currently, a query can be parsed, and computation done for single
predictions.

A test query is also pushed.

The software documentation has been updated to have a draft description
of cli.

--- a/src/tucucli/makefile
+++ b/src/tucucli/makefile
@@ -8,13 +8,17 @@
 NAME := tucucli
 TYPE := APP
 
-SOURCES := tucucli.cpp 
+SOURCES := tucucli.cpp \
+           clicomputer.cpp
+
 INCLUDES := . \
             ../../libs/eigen-3.3.2 \
             ../../libs/spdlog-master-20170622/include \
-            ../../libs/date-master-20170711
-LIBS := tucucommon tucucore botan
-EXTLIBS := 
-DEFINES := 
+            ../../libs/date-master-20170711 \
+			../../libs/cxxopts
+
+LIBS := tucuquery tucucommon tucucore botan
+EXTLIBS :=
+DEFINES :=
 
 include $(TUCUXI_ROOT)/make/rules.mak
