TUC-154 First version of a drug file validator
A new executable called tucuvalidator. It takes as input a drug file
and a json file containing tests to be conducted.
Now it only tests the operations on the parameters, from the covariates.
Used to check a daptomycin model.

I used rapidjson for easily import json

The validator is in tucucore, as it could be used within another application.
The main file simply calls this validator.

	new file:   libs/rapidjson-master-20190220/include/rapidjson/allocators.h
	new file:   libs/rapidjson-master-20190220/include/rapidjson/cursorstreamwrapper.h
	new file:   libs/rapidjson-master-20190220/include/rapidjson/document.h
	new file:   libs/rapidjson-master-20190220/include/rapidjson/encodedstream.h
	new file:   libs/rapidjson-master-20190220/include/rapidjson/encodings.h
	new file:   libs/rapidjson-master-20190220/include/rapidjson/error/en.h
	new file:   libs/rapidjson-master-20190220/include/rapidjson/error/error.h
	new file:   libs/rapidjson-master-20190220/include/rapidjson/filereadstream.h
	new file:   libs/rapidjson-master-20190220/include/rapidjson/filewritestream.h
	new file:   libs/rapidjson-master-20190220/include/rapidjson/fwd.h
	new file:   libs/rapidjson-master-20190220/include/rapidjson/internal/biginteger.h
	new file:   libs/rapidjson-master-20190220/include/rapidjson/internal/diyfp.h
	new file:   libs/rapidjson-master-20190220/include/rapidjson/internal/dtoa.h
	new file:   libs/rapidjson-master-20190220/include/rapidjson/internal/ieee754.h
	new file:   libs/rapidjson-master-20190220/include/rapidjson/internal/itoa.h
	new file:   libs/rapidjson-master-20190220/include/rapidjson/internal/meta.h
	new file:   libs/rapidjson-master-20190220/include/rapidjson/internal/pow10.h
	new file:   libs/rapidjson-master-20190220/include/rapidjson/internal/regex.h
	new file:   libs/rapidjson-master-20190220/include/rapidjson/internal/stack.h
	new file:   libs/rapidjson-master-20190220/include/rapidjson/internal/strfunc.h
	new fi

--- a/src/tucucore/makefile
+++ b/src/tucucore/makefile
@@ -39,6 +39,7 @@ SOURCES := \
            cyclestatisticscalculator.cpp \
            dosage.cpp \
            drugdomainconstraintsevaluator.cpp \
+		   drugfilevalidator.cpp \
            drugmodelimport.cpp \
            drugmodelrepository.cpp \
            hardcodedoperation.cpp \
@@ -77,7 +78,8 @@ INCLUDES := . \
             ../../libs/eigen-3.3.2 \
             ../../libs/boost-1.63.0 \
             ../../libs/date-master-20170711 \
-            ../../libs/spdlog-master-20170622/include
+            ../../libs/spdlog-master-20170622/include \
+			../../libs/rapidjson-master-20190220/include
 LIBS :=
 EXTLIBS :=
 DEFINES :=
