TUC-129 Some code cleaning
Particularly in TargetEvaluator. Less code duplication.

	modified:   src/tucucore/drugmodel/drugmodel.h
	modified:   src/tucucore/makefile
	modified:   src/tucucore/pkmodel.cpp
	modified:   src/tucucore/targetevaluator.cpp
	modified:   src/tucucore/targetevaluator.h
	modified:   src/tucucore/targetextractor.cpp

--- a/src/tucucore/makefile
+++ b/src/tucucore/makefile
@@ -39,9 +39,11 @@ SOURCES := \
            cyclestatisticscalculator.cpp \
            dosage.cpp \
            drugdomainconstraintsevaluator.cpp \
-		   drugfilevalidator.cpp \
+           drugfilevalidator.cpp \
+           drugmodelchecker.cpp \
            drugmodelimport.cpp \
            drugmodelrepository.cpp \
+           generalextractor.cpp \
            hardcodedoperation.cpp \
            intakeextractor.cpp \
            intakeintervalcalculator.cpp \
