TUC-140 Refactored RK4 intake interval calculators
Now IntakeIntervalCalculator has two subclasses: one for analytical,
and one for RK4.
In IntakeIntervalCalculatorRK4, everything about Runge Kutta is implemented,
except the initial concentration values and the derivative.
These two functions have to be supplied by the subclasses.

The system uses the static inheritance pattern to allow a good optimization
of the RK4 process, with inline derivative functions.

	modified:   qtcreator/tucucore.pri
	modified:   ../src/tucucore/intakeintervalcalculator.cpp
	modified:   ../src/tucucore/intakeintervalcalculator.h
	new file:   ../src/tucucore/intakeintervalcalculatoranalytical.cpp
	new file:   ../src/tucucore/intakeintervalcalculatoranalytical.h
	new file:   ../src/tucucore/intakeintervalcalculatorrk4.cpp
	new file:   ../src/tucucore/intakeintervalcalculatorrk4.h
	modified:   ../src/tucucore/makefile
	modified:   ../src/tucucore/operation.cpp
	modified:   ../src/tucucore/pkmodels/onecompartmentbolus.h
	modified:   ../src/tucucore/pkmodels/onecompartmentextra.h
	modified:   ../src/tucucore/pkmodels/onecompartmentinfusion.h
	modified:   ../src/tucucore/pkmodels/rkonecompartmentextra.cpp
	modified:   ../src/tucucore/pkmodels/rkonecompartmentextra.h
	modified:   ../src/tucucore/pkmodels/rkonecompartmentgammaextra.cpp
	modified:   ../src/tucucore/pkmodels/rkonecompartmentgammaextra.h
	modified:   ../src/tucucore/pkmodels/threecompartmentbolus.h
	modified:   ../src/tucucore/pkmodels/threecompartmentextra.h
	modified:   ../src/tucucore/pkmodels/threecompartmentinfusion.h
	modified:   ../src/tucucore/pkmodels/twocompartmentbolus.h
	modified:   ../src/tucucore/pkmodels/twocompartmentextra.h
	modified:   ../src/tucucore/pkmodels/twocompartmentinfusion.h
	modified:   ../test/tucucore/pkmodels/constanteliminationbolus.h

--- a/src/tucucore/makefile
+++ b/src/tucucore/makefile
@@ -46,7 +46,10 @@ SOURCES := \
            generalextractor.cpp \
            hardcodedoperation.cpp \
            intakeextractor.cpp \
+           intakeevent.cpp \
            intakeintervalcalculator.cpp \
+           intakeintervalcalculatoranalytical.cpp \
+           intakeintervalcalculatorrk4.cpp \
            intaketocalculatorassociator.cpp \
            likelihood.cpp \
            montecarlopercentilecalculator.cpp \
@@ -69,6 +72,8 @@ SOURCES := \
            pkmodels/onecompartmentbolus.cpp \
            pkmodels/onecompartmentextra.cpp \
            pkmodels/onecompartmentinfusion.cpp \
+           pkmodels/rkonecompartmentextra.cpp \
+           pkmodels/rkonecompartmentgammaextra.cpp \
            pkmodels/threecompartmentbolus.cpp \
            pkmodels/threecompartmentextra.cpp \
            pkmodels/threecompartmentinfusion.cpp \
@@ -81,7 +86,8 @@ INCLUDES := . \
             ../../libs/boost-1.63.0 \
             ../../libs/date-master-20170711 \
             ../../libs/spdlog-master-20170622/include \
-			../../libs/rapidjson-master-20190220/include
+            ../../libs/rapidjson-master-20190220/include \
+            ../../libs/tiny-js-master-20170629 \
 LIBS :=
 EXTLIBS :=
 DEFINES :=
