TUC-129 Some code cleaning
	modified:   qtcreator/tucucore.pri
	modified:   ../src/tucucore/makefile
	modified:   ../src/tucucore/pkmodel.cpp
	renamed:    ../src/tucucore/pkmodels/rk4twocompartmenterlang4.cpp -> ../src/tucucore/pkmodels/rktwocompartmenterlang.cpp
	renamed:    ../src/tucucore/pkmodels/rk4twocompartmenterlang4.h -> ../src/tucucore/pkmodels/rktwocompartmenterlang.h
	modified:   ../test/tucucore/test_intakeintervalcalculator.h

--- a/src/tucucore/makefile
+++ b/src/tucucore/makefile
@@ -74,6 +74,7 @@ SOURCES := \
            pkmodels/onecompartmentinfusion.cpp \
            pkmodels/rkonecompartmentextra.cpp \
            pkmodels/rkonecompartmentgammaextra.cpp \
+           pkmodels/rktwocompartmenterlang.cpp \
            pkmodels/threecompartmentbolus.cpp \
            pkmodels/threecompartmentextra.cpp \
            pkmodels/threecompartmentinfusion.cpp \
