TUC-159 Adding a treatment-model compatibility checker
This checker checks if the formulation and routes of the treatment
are available in the drug model

	modified:   ../../make/qtcreator/tucucore.pri
	modified:   ../../src/tucucli/clicomputer.cpp
	modified:   ../../src/tucucore/computingcomponent.cpp
	modified:   ../../src/tucucore/computingresponseexport.cpp
	modified:   ../../src/tucucore/computingservice/computingresult.h
	modified:   ../../src/tucucore/dosage.cpp
	modified:   ../../src/tucucore/dosage.h
	modified:   ../../src/tucucore/drugmodel/formulationandroute.cpp
	modified:   ../../src/tucucore/drugmodel/formulationandroute.h
	modified:   ../../src/tucucore/drugmodelrepository.cpp
	modified:   ../../src/tucucore/makefile
	new file:   ../../src/tucucore/treatmentdrugmodelcompatibilitychecker.cpp
	new file:   ../../src/tucucore/treatmentdrugmodelcompatibilitychecker.h
	modified:   ../../src/tucuquery/querytocoreextractor.cpp
	modified:   ../../src/tucuquery/querytocoreextractor.h
	modified:   ../tucucore/drugmodels/test_drug_vancomycin.h

--- a/src/tucucore/makefile
+++ b/src/tucucore/makefile
@@ -67,6 +67,7 @@ SOURCES := \
            targetextractor.cpp \
            targetevaluator.cpp \
            targetevaluationresult.cpp \
+           treatmentdrugmodelcompatibilitychecker.cpp \
            unit.cpp \
            validvalues.cpp \
            pkmodels/onecompartmentbolus.cpp \
