TUC-160 Added a 1 compartment extra with Lag time intake calculator
No test done in tucucore for now, but it behaves well against NONMEM.

--- a/src/tucucore/makefile
+++ b/src/tucucore/makefile
@@ -72,6 +72,7 @@ SOURCES := \
            validvalues.cpp \
            pkmodels/onecompartmentbolus.cpp \
            pkmodels/onecompartmentextra.cpp \
+           pkmodels/onecompartmentextralag.cpp \
            pkmodels/onecompartmentinfusion.cpp \
            pkmodels/rkonecompartmentextra.cpp \
            pkmodels/rkonecompartmentgammaextra.cpp \
