TUC-129 Separated the computing of adjustments in a new class.
Improves the readability of the code.

 Changes to be committed:
	modified:   make/qtcreator/tucucore.pri
	new file:   src/tucucore/computingadjustments.cpp
	* The new class
	new file:   src/tucucore/computingadjustments.h
	* The new class
	modified:   src/tucucore/computingcomponent.cpp
	modified:   src/tucucore/computingcomponent.h
	modified:   src/tucucore/makefile

--- a/src/tucucore/makefile
+++ b/src/tucucore/makefile
@@ -32,6 +32,7 @@ SOURCES := \
            aposteriorietascalculator.cpp \
            cachedexponentials.cpp \
            concentrationcalculator.cpp \
+           computingadjustments.cpp \
            computingcomponent.cpp \
            computingresponseexport.cpp \
            covariateevent.cpp \
