TUC-129 Corrected build.sh

--- a/src/tucucore/makefile
+++ b/src/tucucore/makefile
@@ -35,6 +35,7 @@ SOURCES := \
            computingadjustments.cpp \
            computingcomponent.cpp \
            computingresponseexport.cpp \
+           computingresponsexmlexport.cpp \
            computingutils.cpp \
            covariateevent.cpp \
            covariateextractor.cpp \
