TUC-129 Moving exporters to tucuquery

--- a/src/tucuquery/makefile
+++ b/src/tucuquery/makefile
@@ -11,6 +11,8 @@ TYPE := LIB
 # Let's keep it in alphabetical order
 SOURCES := \
            administrativedata.cpp \
+           computingresponseexport.cpp \
+           computingresponsexmlexport.cpp \
 		   parametersdata.cpp \
 		   query.cpp \
 		   queryimport.cpp \
