TUC-129 Corrected compilation through build.sh

--- a/src/tucucommon/makefile
+++ b/src/tucucommon/makefile
@@ -18,10 +18,12 @@ SOURCES := componentmanager.cpp \
            logger.cpp \
            systeminfo.cpp \
            timeofday.cpp \
-					 translatablestring.cpp \
+           translatablestring.cpp \
+           unit.cpp \
            utils.cpp \
            xmlattribute.cpp \
            xmldocument.cpp \
+           xmlimporter.cpp \
            xmlnode.cpp
 
 INCLUDES := ../../libs/spdlog-master-20170622/include \
