TUC-221 Improved Cache computing design

--- a/src/tucucore/makefile
+++ b/src/tucucore/makefile
@@ -30,6 +30,7 @@ SOURCES := \
            computingservice/computingresponse.cpp \
            computingservice/computingtrait.cpp \
            aposteriorietascalculator.cpp \
+           cachecomputing.cpp \
            cachedexponentials.cpp \
            concentrationcalculator.cpp \
            computingadjustments.cpp \
