TUC-129 Some cleaning

--- a/src/tucucore/makefile
+++ b/src/tucucore/makefile
@@ -75,6 +75,7 @@ SOURCES := \
            pkmodels/onecompartmentextra.cpp \
            pkmodels/onecompartmentextralag.cpp \
            pkmodels/onecompartmentinfusion.cpp \
+           pkmodels/rkmichaelismentenenzyme.cpp \
            pkmodels/rkmichaelismentenonecomp.cpp \
            pkmodels/rkmichaelismententwocomp.cpp \
            pkmodels/rkonecompartmentextra.cpp \
