TUC-129 building scripts corrected

--- a/src/tucucore/makefile
+++ b/src/tucucore/makefile
@@ -55,6 +55,10 @@ SOURCES := \
            intaketocalculatorassociator.cpp \
            likelihood.cpp \
            montecarlopercentilecalculator.cpp \
+		   multicomputingadjustments.cpp \
+		   multiconcentrationcalculator.cpp \
+		   multilikelihood.cpp \
+		   multimontecarlopercentilecalculator.cpp \
            operablegraphmanager.cpp \
            operation.cpp \
            overloadevaluator.cpp \
