TUC-129 Updating makefile for tucucore

--- a/src/tucucore/makefile
+++ b/src/tucucore/makefile
@@ -91,6 +91,7 @@ SOURCES := \
            pkmodels/threecompartmentinfusion.cpp \
            pkmodels/twocompartmentbolus.cpp \
            pkmodels/twocompartmentextra.cpp \
+           pkmodels/twocompartmentextralag.cpp \
            pkmodels/twocompartmentinfusion.cpp
 
 INCLUDES := . \
